force-app/main/default/objects/departure_cities__c/departure_cities__c.object-meta.xml
<CustomObject>
    <label>departure cities</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>departure cities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>