force-app/main/default/objects/departure_cities__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Airlie Beach</fullName>
            </value>
            <value>
                <fullName>Alice Springs</fullName>
            </value>
            <value>
                <fullName>Auckland</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Broome</fullName>
            </value>
            <value>
                <fullName>Cairns</fullName>
            </value>
            <value>
                <fullName>Canberra</fullName>
            </value>
            <value>
                <fullName>Christchurch</fullName>
            </value>
            <value>
                <fullName>Darwin</fullName>
            </value>
            <value>
                <fullName>Gold Coast</fullName>
            </value>
            <value>
                <fullName>Hervey Bay</fullName>
            </value>
            <value>
                <fullName>Hobart</fullName>
            </value>
            <value>
                <fullName>Launceston</fullName>
            </value>
            <value>
                <fullName>Melbourne</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>New Orleans</fullName>
            </value>
            <value>
                <fullName>Palm Cove</fullName>
            </value>
            <value>
                <fullName>Paraburdoo</fullName>
            </value>
            <value>
                <fullName>Perth</fullName>
            </value>
            <value>
                <fullName>Port Douglas</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Wellington</fullName>
            </value>
            <value>
                <fullName>Yulara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>