force-app/main/default/objects/departure_cities__c/fields/departure_airport_code__c.field-meta.xml
<CustomField>
    <fullName>departure_airport_code__c</fullName>
    <formula>CASE( city__c , &quot;Sydney&quot;, &quot;SYD&quot;, &quot;Brisbane&quot;, &quot;BNE&quot;, &quot;Melbourne&quot;, &quot;MEL&quot;, &quot;Perth&quot;, &quot;PER&quot;, &quot;Adelaide&quot;, &quot;ADL&quot;, &quot;Gold Coast&quot;, &quot;OOL&quot;, &quot;Christchurch&quot;, &quot;CHC&quot;, &quot;Wellington&quot;, &quot;WLG&quot;, &quot;AKL&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Airport Code</label>
    <type>Text</type>
</CustomField>