force-app/main/default/objects/departure_cities__c/fields/herokuid__c.field-meta.xml
<CustomField>
    <fullName>herokuid__c</fullName>
    <label>herokuid</label>
    <length>10</length>
    <type>Text</type>
</CustomField>