force-app/main/default/objects/departure_cities__c/fields/ordexp_pincode__c.field-meta.xml
<CustomField>
    <fullName>ordexp_pincode__c</fullName>
    <formula>IF( ISPICKVAL(city__c, &apos;Melbourne&apos;) , &apos;3000&apos;,
  IF( ISPICKVAL(city__c, &apos;Sydney&apos;) , &apos;2000&apos;,
  IF( ISPICKVAL(city__c, &apos;Canberra&apos;) , &apos;2600&apos;,
  IF( ISPICKVAL(city__c, &apos;Brisbane&apos;) , &apos;4000&apos;,
  IF( ISPICKVAL(city__c, &apos;Adelaide&apos;) , &apos;5000&apos;,
  IF( ISPICKVAL(city__c, &apos;Perth&apos;) , &apos;6000&apos;,
 IF( ISPICKVAL(city__c, &apos;Hobart&apos;) , &apos;7000&apos;,
 IF( ISPICKVAL(city__c, &apos;Darwin&apos;) , &apos;0800&apos;,
 &apos;NA&apos;))) ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pincode</label>
    <type>Text</type>
</CustomField>