force-app/main/default/objects/departure_cities__c/fields/surcharge_nz__c.field-meta.xml
<CustomField>
    <fullName>surcharge_nz__c</fullName>
    <label>Surcharge - NZD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>